--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "homepage": "https://github.com/ramironinni/restaurant-page#readme",
     "devDependencies": {
+        "css-loader": "^5.2.6",
+        "style-loader": "^3.0.0",
         "webpack": "^5.42.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
