--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/ramironinni/restaurant-page#readme",
     "devDependencies": {
         "css-loader": "^5.2.6",
+        "html-webpack-plugin": "^5.3.2",
         "style-loader": "^3.0.0",
         "webpack": "^5.42.0",
         "webpack-cli": "^4.7.2",
